--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-h1, a, div {
+body, h1, a, div {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
   text-align: center;
   color: white;
   text-shadow: 1px 1px 6px black;
 }
-h1 {
+.main-title {
   font-size: 40px;
 }
 a.l {
@@ -23,13 +23,15 @@ a.l:hover {
   color: #BBBBFF;
 }
 body {
-  background: url('http://www.awn.com/sites/default/files/styles/original/public/image/attached/1020858-worlds-03.jpg?itok=WqPU-6gn');
+  background: url('bg.jpg');
   background-size: cover;
   height: 100%;
+  position:absolute; top:0; bottom:0; right:0; left:0; margin: 0; padding: 0;
 }
-html { height:100%; }
-body { position:absolute; top:0; bottom:0; right:0; left:0; margin: 0; padding: 0; }
-div {
+html {
+  height:100%;
+}
+.main {
   position: relative;
   top: 42%;
   transform: translateY(-50%);
