--- a/style.css
+++ b/style.css
@@ -11,12 +11,19 @@ body, h1, a, div {
 a.l {
   display: inline-block;
   background: rgba(20,20,20,0.5);
-  width: 45px;
   height: 45px;
   border-radius: 100%;
   transition: 0.5s;
- font-size: 33px;
+  font-size: 33px;
   padding: 10px;
+}
+a.l.l2 {
+  width: 45px;
+}
+a.l.main {
+  border-radius: 10px;
+  margin-top: 30px;
+  text-decoration: none;
 }
 a.l:hover {
   background: rgba(20,20,20,0.9);
